--- a/scidb/19.3/config.ini
+++ b/scidb/19.3/config.ini
@@ -5,10 +5,13 @@ db_user=scidb
 install_root=/opt/scidb/19.3
 logconf=/opt/scidb/19.3/share/scidb/log4cxx.properties
 pluginsdir= /opt/scidb/19.3/lib/scidb/plugins
-server-0=127.0.0.1,1
+server-0=127.0.0.1,15
 execution-threads=4
 result-prefetch-threads=3
 result-prefetch-queue-size=1
 operator-threads=1
-sg-send-queue-size=4
-sg-receive-queue-size=4
+sg-send-queue-size=16
+sg-receive-queue-size=16
+mem-array-threshold=128
+smgr-cache-size=128
+merge-sort-buffer=128
