--- a/scidb/19.11/config.ini
+++ b/scidb/19.11/config.ini
@@ -7,11 +7,16 @@ logconf=/opt/scidb/SCIDB_VER/share/scidb/log4cxx.properties
 pluginsdir= /opt/scidb/SCIDB_VER/lib/scidb/plugins
 server-0=127.0.0.1,15
 execution-threads=4
-result-prefetch-threads=3
-result-prefetch-queue-size=1
-operator-threads=1
+result-prefetch-threads=8
+result-prefetch-queue-size=4
+operator-threads=4
 sg-send-queue-size=16
 sg-receive-queue-size=16
-mem-array-threshold=128
-smgr-cache-size=128
+mem-array-threshold=1024
+smgr-cache-size=1024
 merge-sort-buffer=128
+network-buffer=512
+replication-send-queue-size=500
+replication-receive-queue-size=500
+max-memory-limit=5000
+chunk-segment-size=128
